# switchboard-plug-schedules

./: README.md  meson.build
data/: meson.build  schedules.metainfo.xml.in
po/: POTFILES
src/: Config.vala.in  MainView.vala  Plug.vala  Schedule.vala  ScheduleDialog.vala  ScheduleRow.vala  Setting.vala  SettingPopover.vala  SettingRow.vala  meson.build
